--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <p> {{ name }}</p>
-<p> {{ titulos}}</p>
+<p > {{ titulos }}</p>
 <p> {{ mision }}</p>
-<p> <img [src]="foto" /> </p>
+<p> <img [src]="foto" width="300" height="400"/> </p>
 <p> {{ email }}</p>
 <p> {{ celular }}</p>
 <p> {{ ubicacion }}</p>
